Fixed the "Displaying 22 nodes and 153 links." text not showing up.

--- a/src/style.css
+++ b/src/style.css
@@ -310,6 +310,14 @@ header > h1 {
 	width: min-content;
 }
 
+#GraphItemCount {
+	bottom: 0;
+    text-align: center;
+    position: sticky;
+    display: block;
+    pointer-events: none;;
+}
+
 /* Relationship Selector Stuff */
 #RelationshipSelector{
     position: absolute;
